--- a/heroImage.css
+++ b/heroImage.css
@@ -2,10 +2,15 @@ body, html {
     height: 100%;
 }
 
+:root{
+  --licorice: #1c0f13ff;
+  
+}
+
 /* The hero image */
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/Slash.png");
 
   /* Set a specific height */
   height: 50%;
@@ -19,10 +24,10 @@ body, html {
 
 /* Place text in the middle of the image */
 .hero-text {
+  z-index: 10;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 40%;
+  position: relative;
+  transform: translateY(-50% ,-50%);
   color: white;
 }
