--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@
 
 }
 
+html
+{
+    scroll-behavior: smooth;
+}
+
 body
 {
     font-family: var(--mainFont);
@@ -32,6 +37,8 @@ body
     color:var(--mainFontColor);
     padding:0;
     margin:0;
+
+    
 }
 
 .accent1
@@ -66,6 +73,18 @@ p
 section
 {
     margin: 1% 0px;
+}
+
+.top {
+    display: flex;
+    align-items: center;
+    padding: 2%;
+    border-bottom: 3px dashed #1c0f13ff;
+  
+  }
+  
+.top h1 {
+    flex-grow: 1;
 }
 
 .shelfContainer
