--- a/productCards.css
+++ b/productCards.css
@@ -54,14 +54,14 @@
 @media (max-width: 920px) {
   .product-card {
     flex: 1 21%;
-    border-radius: 5%;
+    border-radius: 30px;
   }
 }
 
 @media (max-width: 600px) {
   .product-card {
     flex: 1 46%;
-    border-radius: 30%;
+    border-radius: 5%;
   }
 }
 
