--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h1
     border: 3px dashed var(--mainFontColor);
     float: left;
     text-align: center;
-    padding: 14px 16px;
+    padding: 2% 3%;
     text-decoration: none;
     font-size: 17px;
   }
