--- a/heroImage.css
+++ b/heroImage.css
@@ -39,6 +39,21 @@ body, html {
   }
 }
 
+@media (max-width:600px) {
+
+  .hero-image{  background-image: /*linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))*/ url("images/tshirtDesigns/CloudyEyes.png");
+    height:50%;
+  }
+
+  .hero-text{
+    display: none;
+  }
+
+  .hero-text h1{
+    display: none;
+  }
+}
+
 /* Place text in the middle of the image */
 .hero-text {
   z-index: 10;
