--- a/productCards.css
+++ b/productCards.css
@@ -10,6 +10,11 @@
   flex-grow: 1;
 }
 
+section
+{
+    margin: 1% 0px;
+}
+
 .sort {
   display: flex;
 
@@ -24,6 +29,7 @@
 .products {
     margin: 0 3%;
     display: flex;
+    align-items: start;
     flex-wrap: wrap;
 }
 
