More content added and top nav for index is now sticky

--- a/style.css
+++ b/style.css
@@ -27,14 +27,26 @@
 
 }
 
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
 
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+    padding-top: 60px;
+  }
 
-/* Style the top navigation bar */
 .topnav {
     overflow: hidden;
     background-color: var(--mainFontColor);
     display: flex;
-    font-family: var(--otherFont);
+    font-family: var(--otherFont);    position: sticky;
+    top: 0;
+    z-index: 100;
+    width: 100%;
   }
   
   /* Style the links inside the navigation bar */
